Added Variable and script JS files.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         </div>        
     </main>
-    <!--  questions array source -->
+    <!--  questions array src -->
     <script src="./assets/js/questions.js"></script>
-    <!-- Global Variable Source -->
+    <!-- Variable src -->
     <script src="./assets/js/variables.js"></script>
-    <!-- Main script -->
+    <!-- Main JS script -->
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
